--- a/sandu.html
+++ b/sandu.html
@@ -14,27 +14,22 @@
     </h1>
     <img src="images.jpeg" alt=""> <img class="imgg" src="index.jpeg" alt="">
 
-    <table>
+    <table border="0">
         <tr class="san">
-            <td><strong><h3> <center>HISTÓRIA DO SANDUICHE NATURAL:</center></h3></strong>
-                A história do sanduíche é a história do inglês Fourth
-                Earl of Sandwich, primeiro lorde do almirantado, ou simplesmente John Montagu. Ele viveu de 1718 a 1792.
-                Naquela época, nenhum homem público teve reputação de ser mais amargo e, ao mesmo tempo, mais amado por
-                seus subordinados no almirantado.
-                Conta a história, que certa noite, enquanto participava de mais uma de suas rodadas de carteado, pediu a
-                um de seus criados que preparasse uma coisa "simples e rápida". Ele não queria abandonar seu passatempo
-                preferido.
-
-
-                Sem saber o que fazer, o criado pegou dois pedaços de pão e colocou um naco de presunto no meio. O lorde
-                adorou a novidade, nunca mais jantou, só comia sanduíches.
-                De lá para cá, as pessoas ficaram muito mais ocupadas que John Montagu por isso, a invenção virou mania
-                universal. Com seu visual atraente, sua praticidade e a possibilidade de receber uma infinidade de novos
-                ingredientes, possibilitando grande variabilidade, o sanduíche viu passar dois séculos de história sem
-                perder o seu glamour.</td>
+            <td><strong>
+                    <h3 class="his">
+                        <center>HISTÓRIA DO SANDUICHE NATURAL</center>
+                    </h3>
+                </strong>
+                <a href="historia.html">clique aqui para acessar a historia </a>
+            </td>
         </tr>
         <tr class="ING">
-            <td><strong><h3> <center>INGREDIENTES:</center></h3></strong> (5 porções)
+            <td><strong>
+                    <h3>
+                        <center>INGREDIENTES:</center>
+                    </h3>
+                </strong> (5 porções)
                 frango
                 100 g de frango desfiado pré-cozido
                 cebola
@@ -51,15 +46,22 @@
                 maionese
                 maionese light a gosto
                 pão de forma
-            </td></tr><tr class="MD"><td>
-                <strong><h3> <center>MODO DE PREPARO:</center></h3> </strong>: 
-           15min
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <strong>
+                    <h3>
+                        <center>MODO DE PREPARO:</center>
+                    </h3>
+                </strong>:
+                15min
                 1
                 Refogue o frango desfiado com azeite, alho e cebola em uma panela.
 
                 2
                 Misture a cebola e o tomate picados, a cenoura ralada, o milho, a salsa, a cebolinha e o sal.
- 
+
                 3
                 Adicione maionese até a obter a consistência desejada do recheio.
 
@@ -67,10 +69,36 @@
                 Cremosa ou mais consistente, como você preferir.
 
                 5
-                Coloque o recheio entre 2 fatias de pão de forma. </td>
+                Coloque o recheio entre 2 fatias de pão de forma.
+            </td>
         </tr>
     </table>
-    
+    <form action="" method="get" class="form-example">
+        <div class="form-example">
+            <label for="name">Qual seu nome? </label>
+            <input type="text" name="name" id="name" required />
+        </div>
+        <div class="form-example">
+            <label for="email">Coloque seu email </label>
+            <input type="email" name="email" id="email" required />
+        </div>
+        <div class="form-example">
+            <label for="pedido">Qual seu pedido? </label>
+            <input type="pedido" name="pedido" id="pedido" required />
+        </div>
+        <div class="form-example">
+            <label for="endereço">Qual endereço? </label>
+            <input type="pedido" name="pedido" id="pedido" required />
+        </div>
+        <div class="form-example">
+            <input type="submit" value="Subscribe!" />
+        </div>
+        <textarea> lanche natural com limãoo lanche natural sem limão</textarea>S
+
+
+
+
+    </form>
 </body>
 
-</html>   
+</html>
